# serverCalcApplication

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  script.sql
.github/workflows/: build.yml  github-actions-demo.yml
config/: config.h
include/: Connection.h  Server.h
include/common/: ProgramOptions.h
include/database/: ConnectionInfo.h  IDatabase.h  PostgreSQLDatabase.h
include/models/: Structures.h
server/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  Request.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  main.cpp
server/database/: IDatabaseAccessor.h  PostgreSQLDatabase.cpp  PostgreSQLDatabase.h  Structures.h
src/: Connection.cpp  ConnectionPool.cpp  Server.cpp
src/common/: ProgramOptions.cpp
src/database/: IDatabase.cpp  PostgreSQLDatabase.cpp
